[package]
authors = ["U007D <curly@humanenginuity.com>"]
categories = []
description = "<describe crate here>"
edition = "2021"
keywords = []
license = "MIT OR Apache-2.0"
name = "arranged"
readme = "README.md"
repository = "https://github.com/u007d/arranged"
version = "0.1.0"

[dependencies]
arith_traits = { version = "0.2.0", git = "https://github.com/u007d/arith_traits" }
num = "0.4.0"
num-traits = "0.2.14"
thiserror = "1.0.30"

[dev-dependencies]
assert2 = "0.3.6"
backtrace = "0.3.64"

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
